--- a/OrganizzeBot/packages.config
+++ b/OrganizzeBot/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AdaptiveCards" version="1.0.0" targetFramework="net46" />
   <package id="Autofac" version="4.7.0" targetFramework="net46" />
   <package id="Chronic.Signed" version="0.3.2" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.4" targetFramework="net46" />
@@ -11,6 +12,7 @@
   <package id="Microsoft.Bot.Builder" version="3.15.0" targetFramework="net46" />
   <package id="Microsoft.Bot.Builder.CognitiveServices" version="1.1.2" targetFramework="net46" />
   <package id="Microsoft.Bot.Connector" version="3.15.0" targetFramework="net46" />
+  <package id="Microsoft.CSharp" version="4.4.0" targetFramework="net46" />
   <package id="Microsoft.IdentityModel.Logging" version="5.2.1" targetFramework="net46" />
   <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.4.403061554" targetFramework="net46" />
   <package id="Microsoft.IdentityModel.Protocols" version="5.2.1" targetFramework="net46" />
